# bittorrent-project

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh.md
bittorrent-client/: Cargo.toml
bittorrent-client-demo/: Cargo.toml
bittorrent-client-demo/src/: decoder.rs  hash.rs  listener.rs  main.rs  meta_info.rs  request_queue.rs  tracker.rs  tracker_response.rs
bittorrent-client-demo/src/peer/: download.rs  ipc.rs  message.rs  mod.rs  peer_connection.rs  util.rs
bittorrent-client/src/: main.rs
bittorrent-protocol/: Cargo.toml
bittorrent-protocol/benches/: socket.rs  stream.rs
bittorrent-protocol/btp-bencode/: Cargo.toml
bittorrent-protocol/btp-bencode/src/: error.rs  lib.rs
bittorrent-protocol/btp-bencode/src/access/: convert.rs  dict.rs
bittorrent-protocol/btp-bencode/src/mutable/: bencode_mut.rs  encode.rs
bittorrent-protocol/btp-bencode/src/reference/: bencode_ref.rs  decode.rs  decode_opt.rs
bittorrent-protocol/btp-dht/: Cargo.toml
bittorrent-protocol/btp-dht/examples/: get_peer.rs
bittorrent-protocol/btp-dht/src/: builder.rs  error.rs  lib.rs  mainlinedht.rs  security.rs  storage.rs  token.rs  transaction.rs
bittorrent-protocol/btp-dht/src/bencode/: bencode.rs  convert.rs  decode.rs  encode.rs  error.rs  mod.rs
bittorrent-protocol/btp-dht/src/handshake/: mod.rs
bittorrent-protocol/btp-dht/src/message/: acting.rs  announce_peer.rs  compact_info.rs  error.rs  find_node.rs  get_data.rs  get_peers.rs  mod.rs  ping.rs  put_data.rs  request.rs  response.rs
bittorrent-protocol/btp-dht/src/routing/: bucket.rs  node.rs  table.rs
bittorrent-protocol/btp-dht/src/worker/: bootstrap.rs  handler.rs  lookup.rs  messenger.rs  mod.rs  refresh.rs  socket.rs  timer.rs
bittorrent-protocol/btp-disk/: Cargo.toml
bittorrent-protocol/btp-disk/examples/: disk_add_torrent.rs
bittorrent-protocol/btp-disk/examples_data/torrent/: music.torrent
bittorrent-protocol/btp-disk/src/: builder.rs  error.rs  lib.rs  manager.rs
bittorrent-protocol/btp-disk/src/fs/: mod.rs  native.rs
bittorrent-protocol/btp-disk/src/memory/: block.rs
bittorrent-protocol/btp-disk/src/message/: mod.rs
bittorrent-protocol/btp-disk/src/tasks/: context.rs  mod.rs
bittorrent-protocol/btp-handshake/: Cargo.toml
bittorrent-protocol/btp-handshake/examples/: peerwrite_handshake.rs
bittorrent-protocol/btp-handshake/src/: lib.rs  local_addr.rs  transport.rs
bittorrent-protocol/btp-handshake/src/filter/: filters.rs  mod.rs
bittorrent-protocol/btp-handshake/src/handler/: framed.rs  handshaker.rs  initiator.rs  listener.rs  (+2 more)
bittorrent-protocol/btp-htracker/: Cargo.toml
bittorrent-protocol/btp-lsd/: Cargo.toml
bittorrent-protocol/btp-magnet/: Cargo.toml
bittorrent-protocol/btp-metainfo/: Cargo.toml
bittorrent-protocol/btp-metainfo/src/: accessor.rs  error.rs  lib.rs  metainfo.rs  parse.rs
bittorrent-protocol/btp-nat/: Cargo.toml
bittorrent-protocol/btp-peer/: Cargo.toml
bittorrent-protocol/btp-peer/examples/: peer_add_peer.rs
bittorrent-protocol/btp-peer/src/: lib.rs  split.rs
bittorrent-protocol/btp-select/: Cargo.toml
bittorrent-protocol/btp-select/examples/: select_metadata_download.rs
bittorrent-protocol/btp-select/src/: lib.rs  uber.rs
bittorrent-protocol/btp-util/: Cargo.toml
bittorrent-protocol/btp-util/src/: bt.rs  lib.rs  test.rs  timer.rs
bittorrent-protocol/btp-utp/: Cargo.toml
bittorrent-protocol/btp-utp/src/: lib.rs
bittorrent-protocol/btp-utracker/: Cargo.toml
bittorrent-protocol/btp-utracker/examples/: utracker_client.rs  utracker_server.rs
bittorrent-protocol/btp-utracker/src/: announce.rs  contact.rs  error.rs  lib.rs  option.rs  request.rs  response.rs  scrape.rs  socket.rs
bittorrent-protocol/examples/: ex1_metainfo_create_torrent.rs  ex2_disk_add_torrent.rs  ex3_dht_get_peer.rs  ex4_echo-server.rs  ex4_handshake_torrent.rs  ex4_utp_socket.rs  ex4_utpcat.rs  ex5_handshake_torrent.rs  ex5_peer_add_peer.rs  ex6_peer_add_peer.rs  ex6_select_metadata_download.rs  ex7_select_metadata_download.rs  ex7_simple_file_download.rs  ex8_echo-server.rs  ex8_simple_file_download.rs  ex8_utp_socket.rs  ex8_utp_stream.rs  ex9_simple_file_download.rs  ex9_utpcat.rs
bittorrent-protocol/examples_data/torrent/: file.torrent  node_module.torrent
bittorrent-protocol/src/: lib.rs
bittorrent-protocol/src/bencode/: mod.rs
bittorrent-protocol/src/dht/: builder.rs  error.rs  mod.rs  security.rs  storage.rs  token.rs  transaction.rs
bittorrent-protocol/src/disk/: builder.rs  error.rs  manager.rs  mod.rs
bittorrent-protocol/src/handshake/: channel.rs  discovery.rs  handshaker.rs  local_addr.rs  mod.rs  stream.rs  transport.rs
bittorrent-protocol/src/lsd/: mod.rs
bittorrent-protocol/src/magnet/: mod.rs
bittorrent-protocol/src/metainfo/: accessor.rs  error.rs  metainfo.rs  mod.rs  parse.rs
bittorrent-protocol/src/peer/: mod.rs
bittorrent-protocol/src/select/: error.rs  mod.rs  uber.rs
bittorrent-protocol/src/util/: contiguous.rs  mod.rs  test.rs
bittorrent-protocol/src/utp/: bit_iterator.rs  mod.rs  packet.rs  socket.rs  stream.rs  util.rs
bittorrent-protocol/src/utracker/: announce.rs  contact.rs  error.rs  mod.rs  option.rs  request.rs  response.rs  scrape.rs
bittorrent-protocol/tests/: bittorrent_protocol_tests.rs
bittorrent-protocol/tests/test1_bencode/: mod.rs
bittorrent-protocol/tests/test2_metainfo/: mod.rs
bittorrent-protocol/tests/test3_disk/: add_torrent.rs  complete_torrent.rs  disk_manager_send_backpressure.rs  load_block.rs  mod.rs  process_block.rs  remove_torrent.rs  resume_torrent.rs  start.rs
bittorrent-protocol/tests/test4_utracker/: mod.rs  test_announce_start.rs  test_announce_stop.rs  test_client_drop.rs  test_client_full.rs  test_connect.rs  test_connect_cache.rs  test_scrape.rs  test_server_drop.rs
bittorrent-protocol/tests/test5_handshake/: mod.rs  test_byte_after_handshake.rs  test_bytes_after_handshake.rs  test_connect.rs  test_filter_allow_all.rs  test_filter_block_all.rs  test_filter_whitelist_diff_data.rs  test_filter_whitelist_same_data.rs
bittorrent-protocol/tests/test6_utp/: mod.rs
(+163 files in other folders)
