[package]
name = "bittorrent-client-demo"
version = "0.1.0"
authors = ["xinwater <1872407021@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode          = "0.1"
sha1             = "0.6.0"
hex-literal      = "0.3.1"
rust-crypto      = "0.2"
percent-encoding = "2.1.0"
rand             = "0.7.3"
reqwest          = { version = "0.10", features = ["blocking"] }
clap             = "2.33"
