[package]
name = "bittorrent-client"
version = "0.1.0"
authors = ["xinwater <1872407021@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bittorrent-protocol = { path  = "../bittorrent-protocol" , version = "0.3.0-bate" }
