[package]
name = "bittorrent-protocol"
version = "0.2.0-core-beta"
authors = ["xinwater <1872407021@qq.com>"]
edition = "2018"
description = "Bittorrent Protocol Library"
homepage    = "https://github.com/xin-water/bittorrent-project/tree/master/bittorrent-protocol"
repository  = "https://github.com/xin-water/bittorrent-project/tree/master/bittorrent-protocol"
keywords    = [ "bittorrent", "bencode", "tracker", "dht", "utp" ]
license     = "LGPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log             = "0.3.0"
simplelog       = "0.10.0"
chrono          = "0.4"
num             = "0.1.0"
nom             = "3.0"
rand            = "0.3.0"
rust-crypto     = "0.2.0"
error-chain     = "0.12"
crossbeam       = "0.8"
walkdir         = "2.0"
base32          = "0.3.1"
byteorder       = "1.1"
crc             = "1.2.0"
bytes           = "0.4"
bit-set         = "0.4"
lru-cache       = "0.1"
slab            = "0.4.0"
url             = "0.5.7"
mio             = "0.5.0"
umio            = "0.3"
threadpool      = "1.0"
num-traits      = "0.1"
quickcheck      = "0.4"
futures         = "0.1"
tokio-core      = "0.1"
tokio-timer     = "0.1"
tokio-codec     = "0.1"
tokio-io        = "0.1"

[dev-dependencies]
futures-test    = { git = "https://github.com/carllerche/better-future.git" }
clap            = "2.33"
hex             = "0.3"
pendulum        = "0.3"
pbr             = "1.0"