[package]
name = "bittorrent-protocol"
version = "0.3.0-bate2"
authors = ["xinwater <1872407021@qq.com>"]
edition = "2021"
description = "Bittorrent Protocol Library"
homepage    = "https://github.com/xin-water/bittorrent-project/tree/dev/bittorrent-protocol"
repository  = "https://github.com/xin-water/bittorrent-project/tree/dev/bittorrent-protocol"
keywords    = [ "bittorrent", "bencode", "tracker", "dht", "utp" ]
license     = "LGPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btp-util        = { version="0.2.1", path = "./btp-util" }
btp-bencode     = { version="0.1.0", path = "./btp-bencode" }
btp-metainfo    = { version="0.1.0", path = "./btp-metainfo" }
btp-magnet      = { version="0.0.1", path = "./btp-magnet" }
btp-disk        = { version="0.3.0", path = "./btp-disk" }
btp-dht         = { version="0.5.2", path = "./btp-dht" }
btp-htracker    = { version="0.0.1", path = "./btp-htracker" }
btp-utracker    = { version="0.1.0", path = "./btp-utracker" }
btp-lsd         = { version="0.0.1", path = "./btp-lsd" }
btp-nat         = { version="0.0.1", path = "./btp-nat" }
btp-utp         = { version="0.1.0", path = "./btp-utp" }
btp-handshake   = { version="0.1.0", path = "./btp-handshake" }
btp-peer        = { version="0.1.0", path = "./btp-peer" }
btp-select      = { version="0.1.0", path = "./btp-select" }


log             = { version = "0.4.0", features = ["std"] }
chrono          = "0.4"
num             = "0.1.0"
nom             = "3.0"
rand            = "0.3.0"
rust-crypto     = "0.2.0"
error-chain     = "0.12"
crossbeam       = "0.8"
walkdir         = "2.0"
base32          = "0.3.1"
byteorder       = "1.1"
crc             = "1.2.0"
bytes           = "0.4"
bit-set         = "0.4"
lru-cache       = "0.1"
slab            = "0.2.0"
url             = "0.5.7"
mio             = "0.5.0"
umio            = "0.3"
threadpool      = "1.0"
num-traits      = "0.1"
quickcheck      = "0.4"
futures         = "0.3"
tokio           = { version = "1.0", features = ["full"] }

[dev-dependencies]
log4rs          = "1.0.0"
clap            = "2.33"
hex             = "0.3"
pendulum        = "0.3"
pbr             = "1.0"