[package]
name = "btp-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btp-util        = { version="0.1.0", path = "../btp-util" }
btp-utp        = { version="0.1.0", path = "../btp-utp" }
crossbeam       = "0.8"
bytes           = "0.4"
nom             = "3.0"
rand            = "0.3.0"



