[package]
name = "btp-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btp-util        = { version="0.2.1", path = "../btp-util" }
btp-bencode     = { version="0.1.1", path = "../btp-bencode" }
btp-utp         = { version="0.1.0", path = "../btp-utp" }
btp-handshake   = { version="0.1.0", path = "../btp-handshake" }
bytes           = "0.4"
error-chain     = "0.12"
nom             = "3.0"
byteorder       = "1.1"
log             = { version = "0.4.0", features = ["std"] }


