[package]
name = "btp-util"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono          = "0.4"
num             = "0.1.0"
rust-crypto     = "0.2.0"
rand            = "0.3.0"
futures         = "0.3.0"
tokio           = { version = "1.0" , features =["time"] }

