[package]
name = "btp-utracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btp-util        = { version="0.2.1", path = "../btp-util" }
nom             = "3.0"
byteorder       = "1.1"
chrono          = "0.4"
umio            = "0.3"
rand            = "0.3.0"
futures         = "0.3"
tokio           = { version = "1",features = ["full"]}
log             = { version = "0.4.0", features = ["std"] }



